--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CookingApp</string>
-    <string name="api_key">ca501c9bceb84d3981dd8583a660b8be</string>
+    <string name="api_key">/*your api key here*/</string>
 
     <string-array name="tags">
         <item>main course</item>
